@startuml
class edu.unina.natour21.model.Report {
- Long id
- Post post
- String title
- String description
+ Long getId()
+ void setId(Long)
+ Post getPost()
+ void setPost(Post)
+ String getTitle()
+ void setTitle(String)
+ String getDescription()
+ void setDescription(String)
}
class edu.unina.natour21.model.Post {
- Long id
- String title
- String description
- Timestamp timestamp
- Timestamp editTimestamp
- Boolean accessibility
- Integer duration
- Integer difficulty
- GPX route
- Double startLat
- Double startLng
- LinkedList<Bitmap> pics
- Boolean isReported
- Float rate
- User author
+ {static} Creator<Post> CREATOR
+ Long getId()
+ void setId(Long)
+ String getTitle()
+ void setTitle(String)
+ String getDescription()
+ void setDescription(String)
+ Timestamp getEditTimestamp()
- void setEditTimestamp(Timestamp)
+ Timestamp getTimestamp()
+ void setTimestamp(Timestamp)
+ Boolean getAccessibility()
+ void setAccessibility(Boolean)
+ Integer getDuration()
+ void setDuration(Integer)
+ Integer getDifficulty()
+ void setDifficulty(Integer)
+ GPX getRoute()
+ void setRoute(GPX)
+ Double getStartLat()
+ void setStartLat(Double)
+ Double getStartLng()
+ void setStartLng(Double)
+ LinkedList<Bitmap> getPics()
+ void setPics(LinkedList<Bitmap>)
+ Boolean getReported()
+ void setReported(Boolean)
+ Float getRate()
+ void setRate(Float)
+ User getAuthor()
+ void setAuthor(User)
+ int describeContents()
+ void writeToParcel(Parcel,int)
}
class edu.unina.natour21.model.User {
- String email
- String name
- String surname
- String nickname
- Bitmap propic
- Boolean isAdmin
- Integer sex
- Date birthdate
- Integer height
- Float weight
- LinkedList<Post> posts
- LinkedList<User> followedUsers
+ {static} Creator<User> CREATOR
+ String getName()
+ void setName(String)
+ String getSurname()
+ void setSurname(String)
+ String getNickname()
+ void setNickname(String)
+ Bitmap getPropic()
+ void setPropic(Bitmap)
+ String getEmail()
+ Boolean getAdmin()
+ void setAdmin(Boolean)
+ Integer getSex()
+ void setSex(Integer)
+ Date getBirthdate()
+ void setBirthdate(Date)
+ Integer getHeight()
+ void setHeight(Integer)
+ Float getWeight()
+ void setWeight(Float)
+ LinkedList<Post> getPosts()
+ void setPosts(LinkedList<Post>)
+ LinkedList<User> getFollowedUsers()
+ void setFollowedUsers(LinkedList<User>)
+ int describeContents()
+ void writeToParcel(Parcel,int)
}
class edu.unina.natour21.model.FavCollection {
- Long id
- User author
- String title
- LinkedList<Post> posts
+ Long getId()
+ void setId(Long)
+ User getAuthor()
+ void setAuthor(User)
+ String getTitle()
+ void setTitle(String)
+ LinkedList<Post> getPosts()
+ void setPosts(LinkedList<Post>)
}
class edu.unina.natour21.model.Review {
- Long id
- Post post
- User author
- Float rate
- String description
+ Long getId()
+ void setId(Long)
+ Post getPost()
+ void setPost(Post)
+ User getAuthor()
+ void setAuthor(User)
+ Float getRate()
+ void setRate(Float)
+ String getDescription()
+ void setDescription(String)
}

edu.unina.natour21.model.Review --> edu.unina.natour21.model.User
edu.unina.natour21.model.Review --> edu.unina.natour21.model.Post
edu.unina.natour21.model.FavCollection --> edu.unina.natour21.model.Post
edu.unina.natour21.model.FavCollection --> edu.unina.natour21.model.User
edu.unina.natour21.model.Report --> edu.unina.natour21.model.Post
edu.unina.natour21.model.User -- edu.unina.natour21.model.User
edu.unina.natour21.model.User -- edu.unina.natour21.model.Post
android.os.Parcelable <|.. edu.unina.natour21.model.Post
android.os.Parcelable <|.. edu.unina.natour21.model.User
@enduml